2009-11-27  Neil Williams  <linux@codehelp.co.uk>

	* src/pdf.c: Support opening text files. (Closes: #1)

2009-11-24  Neil Williams  <linux@codehelp.co.uk>

	* src/ebookui.c: Add support for SaveAs PDF.
	* src/ebookui.h: Flag as saved to a PDF
	* src/gpdftext.glade: Pad the textview to something
	close to the PDF output for almost WYSIWYG PDFs.
	* src/pdf.c: Convert sizes to inches for conversion to
	points. Determine width of page and set pango wrapping.
	Work out how many pages are needed.
	* src/pdf.h: buffer_to_pdf() is more logical.

2009-11-22  Neil Williams  <linux@codehelp.co.uk>

	* Makefile.am: Add ACOCAL_AMFLAGS.
	* configure.ac: Bump version, add dependencies on
	cairo and pango for PDF export support.
	* gpdftext.doap: Kick off the next version.
	* src/ebookui.c: Migrate some PDF code to pdf.c
	* src/ebookui.h: Migrate some PDF code to pdf.c
	* src/pdf.c: Make the ideas into something approaching
	useful example code.
	* src/pdf.h: changes from ebookui.h

2009-11-19  Neil Williams  <linux@codehelp.co.uk>

	* src/ebookui.c: Set the preference value for the
	spell check menu item from GConf in create_window ().
	* src/gpdftext.glade: Set the text area to have
	default focus.

2009-11-19  Neil Williams  <linux@codehelp.co.uk>

	* src/ebookui.c: Add undo/redo support. (Closes: #2)
	* src/ebookui.h: Add GTrashStacks for undo and redo.
	* src/gpdftext.glade: Add buttons for undo and redo.

2009-11-18  Neil Williams  <linux@codehelp.co.uk>

	* src/ebookui.c: Add handler for activating and
	deactivating Save button and menu. (Closes: #3)

2009-11-08  Neil Williams  <linux@codehelp.co.uk>

	* src/ebookui.c: Wrong prototype for delete_cb when
	called as a delete_event, add delete_event_cb and use
	only in the delete_event signal. (Closes: #8)

2009-11-08  Neil Williams  <linux@codehelp.co.uk>

	* src/ebookui.c: Wrap gtk_spell attach/detach hook when
	loading files to allow compilation when gtkspell is not
	available. (Closes: #7)
